Fix bug with opening empty album on hot/top pages. Fix bug with video going out from the borders. Adjusted visibility on image description. Add cover images on my gallery albums.

--- a/src/shared/components/Albums/AlbumDetails/AlbumDetails.module.scss
+++ b/src/shared/components/Albums/AlbumDetails/AlbumDetails.module.scss
@@ -70,8 +70,9 @@
 	  left: 0;
 	  width: 100%;
 	  height: 70px;
-	  background-color: $foreground;
+	  background-color: rgba($foreground, 0.6);
 	  color: $white;
+	  font-weight: 600;
 	  padding: 5px;
 	  overflow: auto;
 	}
